finished and added 4 pages

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,81 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', 'Arial';
 }
 
-.box {    
+.page {    
+    height: 100vh;
+}
+
+#page {
+    background-color: rgb(250, 212, 217);
+
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-items: center;
+    text-align: center;
+}
+
+#page h1 {
+    padding: 1rem;
+    text-shadow: 1px 1px 2px white;
+}
+
+#page p {
+    text-shadow: 1px 1px 2px white;
+    margin: 0.5rem;
+    height: 140px;
+}
+
+#jessica-photo, #beanie-photo, #lilah-photo, #altar-photo {
+    width: 205px;
+    height: 205px;
+    background-size: cover;
+    background-position: top center;
+    border-radius: 50%;
+    border: 2px solid white;
+    margin-bottom: 1rem;
+}
+
+#jessica-photo {
+    background-image: url('../media/jessica.jpeg');
+}
+
+#beanie-photo {
+    background-image: url('../media/beanie.png');
+}
+
+#lilah-photo {
+    background-image: url('../media/max.png');
+}
+
+#altar-photo {
+    background-image: url('../media/jessica-altar.jpeg');
+    background-position: top center;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: black;
+}
+
+a:hover {
+    background-color: white;
+    color: black;
+}
+
+.previous-btn {
+    color: rgb(250, 212, 217);
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.next-btn {
+    color: rgb(250, 212, 217);
+    border: 1px solid white;
+    border-radius: 50%;
 }
