--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@
 
 #page p {
     text-shadow: 1px 1px 2px white;
-    margin: 0.5rem;
-    height: 140px;
+    margin: .5rem 20rem 0 20rem;
+    height: 9rem;
 }
 
 #jessica-photo, #beanie-photo, #lilah-photo, #altar-photo {
@@ -80,3 +80,27 @@ a:hover {
     border: 1px solid white;
     border-radius: 50%;
 }
+
+@media (max-width: 1120px) {
+    #page p { margin: .5rem 10rem 0 10rem; }
+  }
+
+@media (max-width: 800px) {
+    #page p { margin: .5rem 7rem 0 7rem; }
+}
+
+@media (max-width: 700px) {
+    #page p { 
+        margin: .5rem 5rem 0 5rem;
+        height: 12rem; 
+    }
+}
+
+@media (max-width: 540px) {
+    #page p { 
+        margin: .5rem 3rem 0 3rem;
+        height: 14rem; 
+    }
+}
+
+
