--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     font-family: 'Roboto', 'Arial';
 }
 
-.page {    
+#page {    
     height: 100vh;
 }
 
@@ -27,7 +27,7 @@
 #page p {
     text-shadow: 1px 1px 2px white;
     margin: .5rem 20rem 0 20rem;
-    height: 9rem;
+    height: 7rem;
 }
 
 #jessica-photo, #beanie-photo, #lilah-photo, #altar-photo {
@@ -62,6 +62,7 @@ a {
     display: inline-block;
     padding: 8px 16px;
     background-color: black;
+    margin: 5px;
 }
 
 a:hover {
@@ -81,12 +82,24 @@ a:hover {
     border-radius: 50%;
 }
 
-@media (max-width: 1120px) {
-    #page p { margin: .5rem 10rem 0 10rem; }
+@media (max-width: 1300px) {
+    #page p {
+        height: 9rem;
+    }
   }
 
-@media (max-width: 800px) {
-    #page p { margin: .5rem 7rem 0 7rem; }
+@media (max-width: 1120px) {
+    #page p {
+        margin: .5rem 10rem 0 10rem; 
+        height: 7rem;
+    }
+  }
+
+@media (max-width: 950px) {
+    #page p { 
+        margin: .5rem 7rem 0 7rem;
+        height: 9rem;
+    }
 }
 
 @media (max-width: 700px) {
@@ -96,10 +109,13 @@ a:hover {
     }
 }
 
-@media (max-width: 540px) {
+@media (max-width: 500px) {
     #page p { 
-        margin: .5rem 3rem 0 3rem;
-        height: 14rem; 
+        margin: .5rem 2rem 0 2rem;
+        height: 15rem; 
+    }
+    #page h1 {
+        font-size: 20px;
     }
 }
 
